blog: mv specs post to drafts

--- a/blog_src/_drafts/2026-01-10-specs.md
+++ b/blog_src/_drafts/2026-01-10-specs.md
@@ -12,36 +12,62 @@ I was ten when I first built this thing, and I've helped a few of my friends to 
 
 - Case: Corsair 750D Airflow; full tower ATX
 - Motherboard: MSI Z170
-- Processor: Intel Core i5-7600K @ 4.2GHz
+- Processor: Intel Core i5-7600K @ 3.8GHz (clocked at 4.2GHz)
 - Graphics card: EVGA GeForce GTX 1070Ti 8GB
 - Memory: Corsair Vengeance LPX; 2x8GB DDR4 @ 3200MHz
 - Storage: WD_BLACK SN850X M.2; 1TB
-- Power supply: Cooler Master MWE Gold 650W; modular
-- Displays: 
+- Power supply: Cooler Master MWE Gold 650W
+- Displays: Lenovo G32qc-30; 32" 2560x1440 @ 144Hz, VA<br/>LG 24MP68VQ; 24" 1920x1080 @ 75Hz, IPS
 
-- Keyboard: 
+- Keyboard: Logitech MX Keys for Business
 - Mouse: Pulsar X2 Mini
-- Interface: MOTU M2 Pro
+- Interface: MOTU M2
 
-A lot of these choices were made because I was ten.
+A lot of these (interesting) choices were made because I was ten.
 - My case is enormous. I've gutted most of the brackets for hard disks & storage for airflow, so the inside of the case is mostly empty. Thankfully that makes it very quiet, but one of my friends said it was bigger than his dog when he saw it.
-- This motherboard isn't original; at first I had an MSI B250M but it didn't support overclocking, which I wasn't aware of when I was ten. So when I was seventeen (three years after my processor went obsolete), I got the only used LGA1151 motherboard that supported overclocking on Adverts.ie. It was handed to me for twenty quid with bare hands, without a box, fitted with an AMD processor (that I can't remember), two sticks of memory, and a tower cooler (all unnamed). A few of the pins were bent, so I straightened them out. I've had no problems since.
+- The motherboard isn't original; at first I had an MSI B250M but it didn't support overclocking, which I wasn't aware of when I was ten. So when I was seventeen (three years after my processor went obsolete), I got the only used LGA1151 motherboard that supported overclocking on Adverts.ie. It was handed to me for twenty quid with bare hands, without a box, fitted with an AMD processor (that I can't remember), two sticks of memory, and a tower cooler (all unnamed). A few of the pins were bent, so I straightened them out. I've had no problems since.
 - I used to have an EVGA GTX 1050Ti.
 - Storage is the one thing I've switched out the most, usually because of failure. I've had two Seagate 3TB hard drives fail on me, and I've sold off a 250GB Samsung SSD. 
 - The LG monitor is the original. I used to have a TV from Lidl's that I used as a monitor, which I got from the civic amenity site in Ballymount. Honestly it was a great idea; plenty of desk space, built-in sound, huge. I don't know why I got rid of it.
 - I've went through three power supplies.
 
 ## Laptop
-
+My college provided me with a [Dell Latitude 5420](https://www.dell.com/support/manuals/en-ie/latitude-5420-laptop/5420_sp14_setupspecs/specifications-of-latitude-5420?guid=guid-7c9f07ce-626e-44ca-be3a-a1fb036413f9&lang=en-us).
+- Processor: Intel Core i5-1135G7 @ 4.2GHz (usually throttled for battery conservation)
+- Memory: Unnamed 2x8GB DDR4 @ 3200MHz
+- Storage: Unnamed M.2; 256GB
 
 ## Other:
-- OS: 
-- Kernel: 
-- WM: 
-- Shell:
-- Terminal: 
+Versions are given by xbps packages.
+
+- OS: Void Linux x86_64
+- Kernel: Linux 6.12
+- WM: dwl
+- Shell: zsh
+- Terminal: foot
+
+- Phone: Nokia E52 (2009)
 
 ## Music
+- Fender Jaguar
+- Fender Jazzmaster (main)
+- Schecter Omen 8
+
+- VOX AC-30CC2X (x1 12" VOX Alnico Blue + x1 12" Celestion G12-V30)
+
+- Peterson StroboStomp Mini
+- EHX Pitch Fork
+- BOSS
+- EHX Op-Amp Big Muff
+- BOSS DD-500
+- Sentimental Bob Tacana
+
+## Photography
+- Canon A-1
+- Canon Canonet QL-17 G-III
+- Olympus E-510
+
+I usually shoot 400-800 ISO. I've slowed down a lot on photography as it isn't very cheap.
 
 ## Hair
 For my own personal reference;
